Flask_app deployment/cal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cal-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cal-app
  template:
    metadata:
      labels:
        app: cal-app
    spec:
      containers:
        - name: cal-app
          image: 278144774015.dkr.ecr.us-east-2.amazonaws.com/calculator:latest
          ports:
            - name: http
              containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: cal-app-service-nodeport
spec:
  type: NodePort
  selector:
    app: cal-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
